finished the css part

--- a/list/src/css/App.css
+++ b/list/src/css/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #173f5f;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+.box-body {
+  background-color: #20639b;
+  padding: 50px 0px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  color: #f8eee3;
 }
